--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
           <a
             href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
           >
-            <img src="assets/icons/linkedin.svg" alt="github" width="40" />
+            <img
+              src="assets/icons/linkedin.svg"
+              alt="github"
+              width="40"
+              height="40"
+            />
           </a>
           <a
             href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
@@ -162,10 +167,25 @@
         </div>
 
         <form>
-          <input type="text" placeholder="Full Name" required />
-          <input type="email" placeholder="Email" required />
-          <textarea placeholder="Message" required></textarea>
-          <button>Send</button>
+          <div>
+            <label for="full-name">Full Name</label>
+            <input
+              id="full-name"
+              type="text"
+              placeholder="Full Name"
+              required
+            />
+          </div>
+
+          <div>
+            <input type="email" placeholder="Email" required />
+          </div>
+
+          <div>
+            <textarea placeholder="Message" required></textarea>
+          </div>
+
+          <button type="submit">Send</button>
         </form>
 
         <p>Or hit me up on my social media</p>
