--- a/index.html
+++ b/index.html
@@ -3,137 +3,200 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mutiara Nofitasari</title>
     <meta
       name="description"
       content="Personal website of Mutiara Hikmah Nofitasari"
     />
+    <link rel="icon" href="assets/images/logo.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <title>Mutiara Nofitasari</title>
+    <script src="index.js"></script>
   </head>
   <body>
-    <header>
-      <h1>Mutiara Nofitasari</h1>
+    <header class="container header">
+      <a href="/">
+        <div class="logo">
+          <img
+            class="image-logo"
+            id="logo"
+            src="assets/images/logo.png"
+            alt="logo"
+          />
+          <img
+            class="name-logo"
+            id="name-logo"
+            src="assets/images/name-logo.png"
+            alt="logo"
+          />
+        </div>
+      </a>
+
       <nav>
-        <ul>
+        <ul class="navigation">
           <li><a href="#contact">Contact</a></li>
-          <li><a href="#contact">EN | ID</a></li>
-          <li><img src="assets/icons/icon-dark-mode.png" alt="logo" /></li>
+          <li><a href="#">EN | ID</a></li>
+          <li>
+            <a href="javascript:void(0);" onclick="toggleDarkMode()">
+              <img
+                id="dark-mode-icon"
+                class="display-mode"
+                src="assets/icons/icon-dark-mode.png"
+                alt="logo"
+              />
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
 
-    <main>
+    <main class="container stack">
       <section id="about">
-        <div>
+        <div class="about-title">
           <h2>👋🏻 Hey folks,</h2>
-          <h1>I'm Mutiara Nofitasari</h1>
+          <h1 class="animated">
+            <span>I'am</span>
+            <div class="animated-info">
+              <span class="animated-item">Mutiara Nofitasari</span>
+              <span class="animated-item">Software Engineer</span>
+              <span class="animated-item">Front-end Developer</span>
+            </div>
+          </h1>
         </div>
-        <p>
-          I am a proud mother of two who is also a software engineer from
-          Indonesia. Front-end development has been a part of me since 2017, and
-          I enjoy the process of transforming designs into web or mobile
-          applications. Currently, I have fallen in love with iOS Application
-          Development, but I surely love creating any UI for both web and mobile
-          apps with different languages! I loved to cook with my kitchen tools
-          and also my 🍎’s laptop. Let’s collaborate together! xoxo
-        </p>
-        <div>
-          <button>Download Resume</button>
-          <a
-            href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
-          >
+        <div class="about-content">
+          <div>
+            <p>
+              I am a proud
+              <span class="highlight-content">mother of two</span>
+              who is also a
+              <span class="highlight-content"> software engineer </span>
+              from Indonesia. Front-end development has been a part of me since
+              2017, and I enjoy the process of transforming designs into web or
+              mobile applications. Currently, I have fallen in love with
+              <span class="highlight-content">iOS Application Development</span>
+              , but I surely love creating any UI for both web and mobile apps
+              with different languages!
+            </p>
+            <p>
+              I loved to cook with my kitchen tools and also my 🍎’s laptop.<br />
+              Let’s collaborate together! xoxo
+            </p>
+          </div>
+
+          <img
+            src="assets/images/profile-picture.png"
+            alt="Profile Picture"
+            width="150"
+          />
+        </div>
+
+        <div class="contact-container">
+          <a href="assets/resume.pdf" class="rounded-button">
             <img
-              src="assets/icons/linkedin.svg"
-              alt="github"
-              width="40"
-              height="40"
+              src="assets/icons/icon-download.svg"
+              alt="download"
+              width="20"
             />
+            Download Resume
           </a>
-          <a
-            href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
-          >
-            <img src="assets/icons/github.svg" alt="github" width="40" />
-          </a>
-          <a href="https://t.me/mutiarahns">
-            <img src="assets/icons/telegram.svg" alt="telegram" width="40" />
-          </a>
-          <a href="mailto:nofitasarimutiara@gmail.com">
-            <img src="assets/icons/email.svg" alt="email" width="40" />
-          </a>
+          <div class="social-media-container">
+            <a
+              href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
+            >
+              <img src="assets/icons/linkedin.svg" alt="github" width="40" />
+            </a>
+            <a
+              href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
+            >
+              <img src="assets/icons/github.svg" alt="github" width="40" />
+            </a>
+            <a href="https://t.me/mutiarahns">
+              <img src="assets/icons/telegram.svg" alt="telegram" width="40" />
+            </a>
+            <a href="mailto:nofitasarimutiara@gmail.com">
+              <img src="assets/icons/email.svg" alt="email" width="40" />
+            </a>
+          </div>
         </div>
+
+        <hr class="custom-separator" />
       </section>
 
-      <hr />
-
       <section id="skills">
-        <div>
-          <img src="assets/icons/icon-skill.png" alt="skills" width="40" />
-          <div>
+        <div class="header-section">
+          <img src="assets/icons/icon-skill.png" alt="skills" width="50" />
+          <div class="header-section-title">
             <h2>Skills</h2>
             <p>Things I have experience with</p>
           </div>
         </div>
-        <ul>
-          <li>JavaScript</li>
-          <li>HTML & CSS</li>
-          <li>Swift</li>
-          <li>iOS Application Development</li>
-          <li>VIPER Architecture</li>
-          <li>RxSwift</li>
-          <li>ReactJs</li>
-          <li>React Native</li>
-          <li>Git Version Control</li>
-          <li>Xcode</li>
-          <li>VS Code</li>
+
+        <ul class="navigation content">
+          <script>
+            const skills = [
+              "Swift",
+              "iOS Application Development",
+              "VIPER Architecture",
+              "RxSwift",
+              "JavaScript",
+              "ReactJS",
+              "React Native",
+              "Git Version Control",
+              "Xcode",
+              "VS Code",
+            ];
+
+            skills.forEach((skill) => {
+              document.write(
+                `<li><div class="rounded-button skill-item">${skill}</div></li>`
+              );
+            });
+          </script>
         </ul>
+
+        <hr class="custom-separator" />
       </section>
 
-      <hr />
-
-      <section id="projects">
-        <div>
+      <section id="projects" class="project-section">
+        <div class="header-section">
           <img src="assets/icons/icon-experience.png" alt="skills" width="40" />
-          <div>
+          <div class="header-section-title">
             <h2>Projects & Experience</h2>
             <p>Some projects I worked on</p>
           </div>
         </div>
-        <ul>
-          <li>
-            <h3>Byond By BSI</h3>
-            <p>March 2022-March 2024</p>
-            <p>Superapp by Bank Syariah Indonesia</p>
-            <button>Read more</button>
-          </li>
-          <li>
-            <h3>OCTO Click by CIMB Niaga</h3>
-            <p>August 2021 - March 2022</p>
-            <p>
-              Front End Web Developer for SISKOHAT (Indonesian Hajj Registration
-              and Hajj Opening Account)feature in OCTO Click by CIMB Niaga.
-            </p>
-            <button>Read more</button>
-          </li>
-          <li>
-            <h3>Sistem Penilaian Kerja Harian Personi</h3>
-            <p>March 2021 - July 2021</p>
-            <p>
-              Web based application "Sistem Penilaian Kerja Harian Personil" for
-              Dittipidter Bareskrim Polri.
-            </p>
-            <button>Read more</button>
-          </li>
-          <li>
-            <h3>Permata Mobile X</h3>
-            <p>October 2017 - March 2021</p>
-            <p>Mobile banking application by PermataBank</p>
-            <button>Read more</button>
-          </li>
-        </ul>
+
+        <div id="pagination-controls" class="pagination-container">
+          <button id="prev-page" class="pagination-button" disabled>
+            <img
+              src="assets/icons/icon-prev.png"
+              alt="Previous Page"
+              style="width: 20px; height: 20px"
+            />
+          </button>
+          <span id="page-info">Page 1 of 1</span>
+          <button id="next-page" class="pagination-button" disabled>
+            <img
+              src="assets/icons/icon-next.png"
+              alt="Next Page"
+              style="width: 20px; height: 20px"
+            />
+          </button>
+        </div>
+
+        <div id="project-list" class="project-list"></div>
+
+        <script src="assets/js/project-pagination.js"></script>
+
+        <hr class="custom-separator" />
       </section>
 
-      <hr />
-
-      <section id="testimonials">
+      <section id="testimonials" hidden>
         <div>
           <img
             src="assets/icons/icon-testimonial.png"
@@ -146,46 +209,26 @@
           </div>
         </div>
         <ul>
-          <li>
-            <img
-              src="assets/images/default-testimonial.jpg"
-              alt="testimonial"
-            />
-          </li>
+          <li></li>
         </ul>
+
+        <hr class="custom-separator" />
       </section>
 
-      <hr />
-
       <section id="contact">
-        <div>
+        <div class="header-section">
           <img src="assets/icons/icon-contact.png" alt="contact" width="40" />
-          <div>
+          <div class="header-section-title">
             <h2>Contact Me</h2>
             <p>Interested to work together? Let’s talk!</p>
           </div>
         </div>
 
-        <form>
-          <div>
-            <label for="full-name">Full Name</label>
-            <input
-              id="full-name"
-              type="text"
-              placeholder="Full Name"
-              required
-            />
-          </div>
-
-          <div>
-            <input type="email" placeholder="Email" required />
-          </div>
-
-          <div>
-            <textarea placeholder="Message" required></textarea>
-          </div>
-
-          <button type="submit">Send</button>
+        <form class="contact-container">
+          <input type="text" placeholder="Full Name" required />
+          <input type="email" placeholder="Email" required />
+          <textarea placeholder="Message" required></textarea>
+          <button>Send</button>
         </form>
 
         <p>Or hit me up on my social media</p>
@@ -213,7 +256,7 @@
       <hr />
     </main>
 
-    <footer>
+    <footer class="container">
       <p>Made by Mutiara Nofitasari using flaticon. Typeset in Lato.</p>
     </footer>
   </body>
