--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           />
         </div>
 
-        <div class="contact-container">
+        <div class="profile-contact-container">
           <a href="assets/resume.pdf" class="rounded-button">
             <img
               src="assets/icons/icon-download.svg"
