--- a/index.html
+++ b/index.html
@@ -107,15 +107,17 @@
           <div class="social-media-container">
             <a
               href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
+              target="_blank"
             >
               <img src="assets/icons/linkedin.svg" alt="github" width="40" />
             </a>
             <a
               href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
+              target="_blank"
             >
               <img src="assets/icons/github.svg" alt="github" width="40" />
             </a>
-            <a href="https://t.me/mutiarahns">
+            <a href="https://t.me/mutiarahns" target="_blank">
               <img src="assets/icons/telegram.svg" alt="telegram" width="40" />
             </a>
             <a href="mailto:nofitasarimutiara@gmail.com">
@@ -225,39 +227,47 @@
         </div>
 
         <form class="contact-container">
+          <label>Full Name:</label>
           <input type="text" placeholder="Full Name" required />
+          <label>Email:</label>
           <input type="email" placeholder="Email" required />
+          <label>Message:</label>
           <textarea placeholder="Message" required></textarea>
           <button>Send</button>
         </form>
 
-        <p>Or hit me up on my social media</p>
+        <div class="contact-container social-media">
+          <p>Or hit me up on my social media</p>
 
-        <div>
-          <a
-            href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
-          >
-            <img src="assets/icons/linkedin.svg" alt="github" width="40" />
-          </a>
-          <a
-            href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
-          >
-            <img src="assets/icons/github.svg" alt="github" width="40" />
-          </a>
-          <a href="https://t.me/mutiarahns">
-            <img src="assets/icons/telegram.svg" alt="telegram" width="40" />
-          </a>
-          <a href="mailto:nofitasarimutiara@gmail.com">
-            <img src="assets/icons/email.svg" alt="email" width="40" />
-          </a>
+          <div class="social-media-container">
+            <a
+              href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
+              target="_blank"
+            >
+              <img src="assets/icons/linkedin.svg" alt="github" width="40" />
+            </a>
+            <a
+              href="http://www.linkedin.com/in/mutiara-hikmah-nofitasari-b639b5131"
+              target="_blank"
+            >
+              <img src="assets/icons/github.svg" alt="github" width="40" />
+            </a>
+            <a href="https://t.me/mutiarahns" target="_blank">
+              <img src="assets/icons/telegram.svg" alt="telegram" width="40" />
+            </a>
+            <a href="mailto:nofitasarimutiara@gmail.com">
+              <img src="assets/icons/email.svg" alt="email" width="40" />
+            </a>
+          </div>
         </div>
       </section>
 
       <hr />
     </main>
 
-    <footer class="container">
-      <p>Made by Mutiara Nofitasari using flaticon. Typeset in Lato.</p>
+    <footer class="footer-container">
+      <div class="footer-content">
+        <p>&copy; 2024 Mutiara Nofitasari. All rights reserved.</p>
     </footer>
   </body>
 </html>
